<resources>
    <string name="app_name">Grinnell DB</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_detail">Profile</string>
    <string name="title_activity_search_results">Results</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password_required">Password</string>
    <string name="login_button">Sign In</string>

    <!-- Strings related to search -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search_button">SEARCH</string>

    <!-- Strings for error messages -->
    <string name="server_failure">Server failure</string>
    <string name="networking_error">Networking error</string>
    <string name="no_connection">No connection to Grinnell wifi</string>
    <string name="retry">Retry</string>
    <string name="authentication_failure">Wrong username or password</string>

    <!-- Strings for transitions between activities -->
    <string name="calling_class">calling_class</string>
    <string name="search_pager_activity">SearchPagerActivity</string>
    <string name="login_activity">LoginActivity</string>

    <!-- Strings for progress indicators -->
    <string name="logging_in">Logging in</string>
    <string name="searching">Searching</string>

    <!-- Strings for advanced search -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_username">Username</string>
    <string name="hint_home_address">Home Address</string>
    <string name="hint_campus_address">Campus Address</string>

    <!-- Strings for detail activity -->
    <string name="full_name">%1$s %2$s</string>
    <string name="email_shorthand">[%1$s]</string>

    <!-- Strings for sending emails and phone calls -->
    <string name="base_email">%1$s@grinnell.edu</string>
    <string name="phone_uri">tel:641269%1$d</string>

    <!-- Strings for menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_email">Email</string>

    <!-- Strings for Shared Preferences-->
    <string name="sharedprefs_file_key">edu.grinnell.appdev.grinnelldirectory.SHARED_PREF</string>
    <string name="sharedprefs_login_cookie_key">edu.grinnell.appdev.grinnelldirectory.SHARED_PREF_LOGIN_KEY</string>
    <string name="expired_cookie">edu.grinnell.appdev.grinnelldirectory.EXPIRED_COOKIE_KEY</string>

    <string name="search_toast">Searching</string>
    <string name="title_profile_detail">Profile Detail</string>
    <string name="title_profile_list">Profiles</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_requesttask">requesttask</string>
    <string name="submit">Submit</string>
    <string name="title_activity_search_form">Grinnell DB</string>
    <string name="username">Username</string>
    <string name="campus_phone">Campus Phone</string>
    <string name="campus_address">Campus Address</string>
    <string name="home_address">Home Address</string>
    <string name="detailed_search">Detailed Search</string>
    <string name="simple_search">Simple Search</string>

    <string-array name="facultydeptarray">
        <item>Any Faculty Department</item>
        <item>Accounting</item>
        <item>Admission</item>
        <item>Analytic Supp. &amp; Inst.Research</item>
        <item>Anthropology</item>
        <item>Art</item>
        <item>Athletics</item>
        <item>Biology</item>
        <item>Bookstore</item>
        <item>Campus Safety &amp; Security</item>
        <item>Careers, Life, and Service</item>
        <item>Center International Studies</item>
        <item>Chemistry</item>
        <item>Chinese &amp; Japanese</item>
        <item>Classics (Greek &amp; Latin)</item>
        <item>College Contacs</item>
        <item>College Services</item>
        <item>Comm. Enhancement &amp; Engagement</item>
        <item>Communications</item>
        <item>Computer Science</item>
        <item>Conference Operations &amp; Events</item>
        <item>Corp. Found &amp; Gov\'t Rel.</item>
        <item>CRSSJ</item>
        <item>Dean of the College</item>
        <item>Development &amp; Alumni Relations</item>
        <item>Dining Services</item>
        <item>Economics</item>
        <item>Education</item>
        <item>English</item>
        <item>Faulconer Gallery</item>
        <item>Financial Aid</item>
        <item>Forensics</item>
        <item>French and Arabic</item>
        <item>Gender, Women\'s and Sexuality Studies</item>
        <item>German</item>
        <item>Grinnell-In-London</item>
        <item>History</item>
        <item>Human Resources</item>
        <item>Information Technology Services</item>
        <item>Instructional Technologies</item>
        <item>Intercultural Engmt &amp; Ldshp</item>
        <item>Library</item>
        <item>Mail Services</item>
        <item>Math Lab</item>
        <item>Mathematics &amp; Statistics</item>
        <item>Music</item>
        <item>Off-Campus Study</item>
        <item>Office of Investments</item>
        <item>Office of the Ombuds</item>
        <item>Office of the Treasurer</item>
        <item>Philosophy</item>
        <item>Physical Education</item>
        <item>Physics</item>
        <item>Politcal Science</item>
        <item>President</item>
        <item>Psychology</item>
        <item>Reading Lab</item>
        <item>Registrar</item>
        <item>Religious Studies</item>
        <item>Russian</item>
        <item>Science Dept</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Student Affairs</item>
        <item>Student Health &amp; Counseling</item>
        <item>Theatre and Dance</item>
        <item>Wilson Program</item>
        <item>Writing Lab</item>
    </string-array>

    <string-array name="studentmajorarray">
        <item>Any Student Major</item>
        <item>American Studies</item>
        <item>Anthropology</item>
        <item>Art</item>
        <item>Biological Chemistry</item>
        <item>Biology</item>
        <item>Certificate</item>
        <item>Chemistry</item>
        <item>Chinese</item>
        <item>Classics</item>
        <item>Computer Science</item>
        <item>Economics</item>
        <item>English</item>
        <item>Exchange Student</item>
        <item>French</item>
        <item>Gender, Womens, &amp; Sexuality Studies</item>
        <item>General Sciene-Biology</item>
        <item>General Science-Chemistry</item>
        <item>General Science-Computer Science</item>
        <item>General Science-Math</item>
        <item>General Science-Physics</item>
        <item>General Sceince-Psychology</item>
        <item>German</item>
        <item>History</item>
        <item>Independent</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Politcal Science</item>
        <item>Psychology</item>
        <item>Religious Studies</item>
        <item>Russian</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Theatre</item>
        <item>Undeclared</item>
    </string-array>

    <string-array name="studentconcentrationarray">
        <item>Any Student Concentration</item>
        <item>American Studies</item>
        <item>East Asian Studies</item>
        <item>Environmental Studies</item>
        <item>European Studies Concentr</item>
        <item>Global Development Studie</item>
        <item>Latin American Studies</item>
        <item>Linguistics</item>
        <item>Neuroscience</item>
        <item>Policy Studies</item>
        <item>Russian &amp; East European S</item>
        <item>Technology Studies</item>
        <item>Western European Studies</item>
    </string-array>

    <string-array name="sgaarray">
        <item>Any SGA Position</item>
        <item>Administrative Coordinator</item>
        <item>All Campus Events Coordinator</item>
        <item>All Campus Events Vice-Coordinator</item>
        <item>Asst Treasurer</item>
        <item>Clangrala Senator</item>
        <item>CND Senator</item>
        <item>Concerts Chair</item>
        <item>Diversity and Outreach Coordinator</item>
        <item>East Senator</item>
        <item>Films Chair</item>
        <item>Jamaland Senator</item>
        <item>Loosehead Senator</item>
        <item>OC(N)CO Senator</item>
        <item>President</item>
        <item>Smounker Senator</item>
        <item>Student Services Coordinator</item>
        <item>Treasurer</item>
        <item>VP for Academic Affairs</item>
        <item>VP for Student Affairs</item>
    </string-array>

    <string-array name="hiatusarray">
        <item>Any Hiatus Status</item>
        <item>Off Campus Study</item>
        <item>Engineering</item>
        <item>Grinnell In London</item>
        <item>Grinnell In Washington</item>
    </string-array>

    <string-array name="classyeararray">
        <item>Any Class Year</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>
