<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_last_name"
                android:imeOptions="actionSearch"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_phone"
                android:imeOptions="actionSearch"
                android:inputType="phone"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_username"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_home_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/home_address_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_home_address"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_campus_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/campus_address_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/hint_campus_address"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/student_class_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/classyeararray" />

        <Spinner
            android:id="@+id/fac_dept_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/facultydeptarray" />

        <Spinner
            android:id="@+id/student_major_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/studentmajorarray"
            android:prompt="@string/app_name" />

        <Spinner
            android:id="@+id/concentration_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/studentconcentrationarray" />

        <Spinner
            android:id="@+id/sga_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/sgaarray" />

        <Spinner
            android:id="@+id/hiatus_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:entries="@array/hiatusarray" />
    </LinearLayout>
</ScrollView>